# ntu-1

./: cars.json  pyproject.toml
ntu_1/: main.py  main1.py  schemas.py
