[tool.poetry]
name = "ntu-1"
version = "0.1.0"
description = ""
authors = ["Abdullah  <72508253+abdullah2221@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
sqlmodel = "^0.0.16"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
